--- a/public/assets/css/master.css
+++ b/public/assets/css/master.css
@@ -44,6 +44,13 @@ a {
     background: rgb(197 226 243) !important;
 }
 
+.select2-container--classic .select2-selection--single, .select2-container--classic .select2-selection--single .select2-selection__arrow, .select2-container--classic .select2-selection--single .select2-selection__rendered, .select2-container--default .select2-selection--multiple, .select2-container--default .select2-selection--single, .select2-container--default .select2-selection--single .select2-selection__arrow, .select2-container--default .select2-selection--single .select2-selection__rendered {
+    border-color: transparent;
+    border-bottom: 1px solid #dfe5ef;
+    height: 28px;
+    line-height: 20px;
+}
+
 /*
  * ====================================================================
  * MENU
