--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,3 +1,11 @@
 .text-break {
     white-space: normal !important;
 }
+
+.display-block {
+    display: block !important;
+}
+
+.display-none {
+    display: none !important;
+}
