--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -240,7 +240,7 @@ div > .select2 {
 .li_reporte_ventas {
     list-style-type: none !important;
     position: relative !important;
-    left: -10px !important;
+    padding: 10px !important;
 }
 
 .nowrap {
@@ -270,6 +270,10 @@ div > .select2 {
 
 fieldset {
     border: 1px solid #898796 !important;
+}
+
+legend {
+    font-size: 16px !important;
 }
 
 /* .modal {
